--- a/package.json
+++ b/package.json
@@ -1,36 +1,42 @@
 {
-  "name": "api_servicios_externos",
-  "version": "0.0.1",
-  "description": "Api para conectar el sistema LUCFARMA con servicios externos",
-  "main": "index.js",
+  "name": "api_atencion_cliente",
+  "version": "1.0.0",
+  "description": "API para la aplicación de atención al cliente",
+  "main": "api.js",
+  "dependencies": {
+    "aws-sdk": "^2.1044.0",
+    "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.17.1",
+    "file-system": "^2.2.2",
+    "fs": "^0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
+    "md5": "^2.3.0",
+    "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
+    "nodemailer": "^6.7.2",
+    "nodemailer-smtp-transport": "^2.7.4",
+    "nodemon": "^2.0.15",
+    "path": "^0.12.7",
+    "pg": "^8.7.1",
+    "pg-format": "^1.0.4",
+    "request": "^2.88.2"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --ignore ./src/public/ src/index.js -e ejs,js,css,html,jpg,png,scss"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/FarmaGrego2021/api_servicios_externos.git"
+    "url": "git+https://github.com/FarmaGrego2021/Api_Atencion_Cliente.git"
   },
   "author": "Alejandro Mendoza",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/FarmaGrego2021/api_servicios_externos/issues"
+    "url": "https://github.com/FarmaGrego2021/Api_Atencion_Cliente/issues"
   },
-  "homepage": "https://github.com/FarmaGrego2021/api_servicios_externos#readme",
-  "dependencies": {
-    "aes-everywhere": "^1.0.0",
-    "axios": "^0.27.2",
-    "body-parser": "^1.20.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "express-xml-bodyparser": "^0.3.0",
-    "jsonwebtoken": "^9.0.0",
-    "nodemon": "^2.0.16",
-    "request": "^2.88.2",
-    "soap": "^0.45.0",
-    "sqlite3": "^5.0.8",
-    "winston": "^3.8.2",
-    "xml2js": "^0.4.23"
-  }
+  "homepage": "https://github.com/FarmaGrego2021/Api_Atencion_Cliente#readme"
 }
